--- a/.github/workflows/tf-plan.yml
+++ b/.github/workflows/tf-plan.yml
@@ -13,6 +13,10 @@ on:
 #      - '.github/workflows/terraform.yml'
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read
+  
 env:
   TERRAFORM_VERSION: '1.12.2'
   WORKING_DIRECTORY: '.'
