--- a/.github/workflows/workflow01.yml
+++ b/.github/workflows/workflow01.yml
@@ -10,9 +10,9 @@ jobs:
       uses: azure/login@v2
       with:
         auth-type: IDENTITY
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        client-id: ${{ secrets.ARM_CLIENT_ID }}
+        tenant-id: ${{ secrets.ARM_TENANT_ID }}
+        subscription-id: ${{ ARM.AZURE_SUBSCRIPTION_ID }}
         enable-AzPSSession: true
 
     # Azure CLI action only supports linux self-hosted runners for now.
