--- a/.github/workflows/workflow02.yml
+++ b/.github/workflows/workflow02.yml
@@ -10,8 +10,8 @@ jobs:
       uses: azure/login@v2
       with:
         auth-type: IDENTITY
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        tenant-id: ${{ secrets.ARM_TENANT_ID }}
+        subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
         enable-AzPSSession: true
 
     # Azure CLI action only supports linux self-hosted runners for now.
