--- a/.github/workflows/workflow02.yml
+++ b/.github/workflows/workflow02.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   test:
-    runs-on: [self-hosted] # Specify the label of your self-hosted runner here
+#    runs-on: [self-hosted] # Specify the label of your self-hosted runner here
     steps:
     - name: Azure login
       uses: azure/login@v2
