--- a/.github/workflows/workflow01.yml
+++ b/.github/workflows/workflow01.yml
@@ -1,10 +1,14 @@
 name: workflow01
 on: 
   workflow_dispatch:
+  
+permissions:
+  id-token: write
+  contents: read  
 
 jobs:
   test:
-#    runs-on: [self-hosted] # Specify the label of your self-hosted runner here
+    runs-on: ubuntu-latest
     steps:
     - name: Azure login
       uses: azure/login@v2
