--- a/.github/workflows/workflow01.yml
+++ b/.github/workflows/workflow01.yml
@@ -16,7 +16,7 @@ jobs:
         auth-type: IDENTITY
         client-id: ${{ secrets.ARM_CLIENT_ID }}
         tenant-id: ${{ secrets.ARM_TENANT_ID }}
-        subscription-id: ${{ ARM_SUBSCRIPTION_ID }}
+        subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
         enable-AzPSSession: true
 
     # Azure CLI action only supports linux self-hosted runners for now.
